Fixed some alignment

--- a/Styles/body.css
+++ b/Styles/body.css
@@ -1,34 +1,17 @@
 body {
   margin: 0;
   height: 3000px;
-  padding-left: 280px;
-  background-color: rgb(15, 17, 17);
+  padding-left: 250px;
+  background-color: rgb(99, 206, 206);
   font-family: 'Roboto', sans-serif;
   color: white;
 }
 
-.body-display-selector-bar{
-  display: flex;
-  width: 1100px;
+.main-body{
+  max-width: 1100px;
   justify-content: center;
   align-items: center;
 }
-  .body-display-selector{
-    display: flex;
-
-  }
-    .body-display-options{
-      padding: 20px 40px;
-      font-weight: 200;
-      opacity: 0.6;
-      justify-content: center;
-      align-items: center;
-    }
-    .body-display-options:hover{
-      border-top: 2px solid white;
-      font-weight: 600;
-    }
-
 
 .posts {
   margin: 0;
