--- a/Styles/header.css
+++ b/Styles/header.css
@@ -3,35 +3,36 @@
   background-color: rgb(0, 0, 0);
   display:flex;
   flex-direction: column;
-  max-width: 1100px;
 }
 
-.banner{
-  background-color: rgb(41, 112, 112);
-  display: flex;
-  margin: 50px 0;
-}
+  .banner{
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    margin: 40px 40px;
+    justify-content: center;
+  }
 
     .profile-pic{
-      background-color: black;
+      background-color: rgb(0, 0, 0);
+      padding: 0 60px;
+      margin: 0 30px;
     }
 
-    .sed-profile-pic{
-      width: 150px;
-      border-radius: 100%;
-      margin: 40px;
-    }
+      .sed-profile-pic{
+        width: 150px;
+        border-radius: 100%;
+      }
 
-    .name-btn-level{
-      display: flex;
-      align-items: center;
-    }
+      .name-btn-level{
+        display: flex;
+        align-items: center;
+      }
 
-    .verified-name{
-      display: flex;
-      margin-right: 20px;
-      font-size: 20px;
-    }
+        .verified-name{
+          display: flex;
+          margin-right: 20px;
+          font-size: 20px;
+        }
 
     .profile-info{
       flex: 1;
@@ -39,112 +40,88 @@
       background-color: black;
     }
 
-    .verified-icon{
-      width: 20px;
-      margin-left: 10px;
+      .verified-icon{
+        width: 20px;
+        margin-left: 10px;
+      }
+
+      .btn{
+        height: 32px;
+        margin-right: 10px;
+        border-radius: 5px;
+        border: none;
+        font-weight: bold;
+        font-size: 10px;
+        padding: 5px 17px;
+        font-size: 13px;
+        transition: background-color 0.15s;
+      }
+
+      .follow-btn{
+        background-color: #0095F6;
+        color: white;
+      }
+
+        .follow-btn:hover{
+          background-color: #0588df;
+        }
+
+      .message-btn:hover{
+        background-color: rgb(219, 219, 219);
+      }
+
+      .follow-icon{
+        height: 32px;
+        border-radius: 5px;
+        opacity: 1;
+      }
+
+        .follow-icon:hover{
+          opacity: 0.8;
+        }
+
+      .options-icon{
+        margin-left: 10px;
+      }
+
+    /*ACCOUNT STATS*/
+    .account-stats{
+      display: flex;
+      margin-top: 20px;
+      margin-bottom: 20px;
     }
 
-    .btn{
-      height: 32px;
-      margin-right: 10px;
-      border-radius: 5px;
-      border: none;
-      font-weight: bold;
-      font-size: 10px;
-      padding: 5px 17px;
-      font-size: 13px;
-      transition: background-color 0.15s;
+    .account-stats div{
+      margin-right: 20px;
     }
 
-    .follow-btn{
-      background-color: #0095F6;
-      color: white;
+    .stats-number{
+      font-weight: 500;
     }
 
-    .follow-btn:hover{
-      background-color: #0588df;
+    .account-blurb p{
+      margin-top: 0;
+      margin-bottom: 0;
     }
 
-    .message-btn:hover{
-      background-color: rgb(219, 219, 219);
+    .account-blurb-a{
+      font-size: 14px;
+      font-weight: 500;
     }
 
-    .follow-icon{
-      height: 32px;
-      border-radius: 5px;
-      opacity: 1;
+    .account-blurb-b{
+      font-size: 14px;
     }
 
-    .follow-icon:hover{
-      opacity: 0.8;
+    .account-blurb-c{
+      font-size: 14px;
+      font-weight: 500;
+      text-decoration: none;
+      color: rgb(224, 241, 255);
     }
 
-    .options-icon{
-      margin-left: 10px;
+    .account-blurb-c:hover{
+      text-decoration: underline;
+      cursor: pointer;
     }
 
-/*ACCOUNT STATS*/
-.account-stats{
-  display: flex;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-  .account-stats div{
-    margin-right: 20px;
-  }
-
-  .stats-number{
-    font-weight: 500;
-  }
-
-  .account-blurb p{
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-
-  .account-blurb-a{
-    font-size: 14px;
-    font-weight: 500;
-  }
-
-  .account-blurb-b{
-    font-size: 14px;
-  }
-
-  .account-blurb-c{
-    font-size: 14px;
-    font-weight: 500;
-    text-decoration: none;
-    color: rgb(224, 241, 255);
-  }
-
-  .account-blurb-c:hover{
-    text-decoration: underline;
-    cursor: pointer;
-  }
-
-.reels-slider{
-  background-color: rgb(0, 0, 0);
-  padding-bottom: 50px;
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 2px solid gray;
-}
-
-  .reel{
-    background-color: black;
-    justify-content: center;
-  }
-    .reels-pic{
-      border-radius: 100%;
-      width: 77px;
-      background-color: black;
-      border: 1px solid gray;
-      padding: 3px;
-    }
-    .reels-description{
-      text-align: center;
-      font-size: 13px;
-      margin-top: 15px;
-    }
