--- a/Styles/sidebar.css
+++ b/Styles/sidebar.css
@@ -1,14 +1,14 @@
 .sidebar {
   background-color: lightgray;
   position: fixed;
-  width: 260px;
+  width: 250px;
   top: 0;
   left: 0;
   bottom: 0;
   display: flex;
   flex-direction: column;
   column-gap: 0;
-  border-right: 1px solid lightgray;
+  border-right: 1px solid rgb(56, 55, 55);
 }
 
 .instagram-logo{
